client/src/app/site/pages/meetings/pages/participants/pages/mandate-check/components/mandate-check-list/mandate-check-list.component.scss
@use 'src/assets/styles/tables.scss';
@use 'src/assets/styles/media-queries.scss';

.flex-container {
    display: flex;
    flex-direction: column;
}

.justify-center {
    justify-self: center;
}

.align-left {
    align-items: start;
}

.align-right {
    align-items: end;
}

.groups-grid {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 20px;
}

.border-grid {
    display: grid;
    grid-template-columns: 15% 70% 15%;
    @media (max-width: 700px) {
        grid-template-columns: 0px 100% 0px;
        border-width: 0px;
    }
}

.header-grid {
    display: grid;
    grid-template-columns: 95% 5%;
}

mat-card {
    overflow-block: auto;
    display: inline-flex;
    scrollbar-width: none;
}

.card-grid {
    display: grid;
    white-space: nowrap;
    --center-width: 60%;
    --columns-width: 8%;
    grid-template-columns: var(--columns-width) 2fr var(--center-width) 2fr var(--columns-width);
    grid-gap: 10px;
    @include media-queries.set-breakpoint-lower(xs) {
        --columns-width: 6%;
        --center-width: 40%;
    }
    @include media-queries.set-breakpoint-upper(md) {
        --columns-width: 6.5%;
        --center-width: 60%;
    }
    @include media-queries.set-breakpoint-upper(lg) {
        --columns-width: 9%;
        --center-width: 70%;
    }
}

.gender-map-grid {
    display: grid;
    .row {
        white-space: nowrap;
        padding: 1em 0em 1em 0em;
        display: grid;
        --center-width: 60%;
        --columns-width: 10%;
        grid-template-columns: var(--columns-width) 2fr var(--center-width) 2fr var(--columns-width);
        @include media-queries.set-breakpoint-upper(md) {
            --columns-width: 8%;
            --center-width: 60%;
        }
        @include media-queries.set-breakpoint-upper(lg) {
            --columns-width: 10%;
            --center-width: 70%;
        }
    }
    .row:not(:last-child) {
        border-bottom: 1px solid rgba(177, 177, 177, 0.637);
    }
}

.footer-grid {
    display: grid;
    grid-template-columns: 50% 50%;
    grid-gap: 20px;
    @media (max-width: 700px) {
        grid-template-columns: repeat(auto-fit, 250px);
    }
}

.border-line {
    margin-bottom: 7px;
    border-top: 2px solid rgba(128, 128, 128, 0.2);
}

.color-inherit {
    color: inherit;
}

.center {
    align-self: center;
}

.small-margin-top {
    margin-top: 7px;
}

.bold {
    font-weight: 500;
}

.margin-left-large {
    margin-left: 140px;
    @media (max-width: 700px) {
        margin-left: 70px;
    }
}

.margin-left-medium {
    margin-left: 115px;
}

.margin-bottom-20 {
    margin-bottom: 20px;
}

button {
    border-radius: 0%;
}

.text-large-bold {
    font-size: 19px;
    font-weight: 600;
}

.text-small {
    font-size: 12px;

    &-bold {
        font-weight: 500;
    }
}

.text-medium-bold {
    font-size: 16px;
    font-weight: 500;
}

.text-medium {
    font-size: 14px;
}

